# Proxmox-Automated-Web-Services

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0452bacc98f7_add_tier_requests.py  0b968bc0e811_add_last_accessed_at_to_resources.py  18c279c5cb20_add_proxmox_volid_to_volumes.py  1a2b3c4d5e6f_fix_cluster_connections_id_to_uuid.py  22025c1effec_add_security_group_id_to_vpcs.py  3658943f56bc_initial_schema.py  38e231f7ff8d_add_cascade_to_resource_security_groups.py  3cb77e634c99_add_network_mode_to_vpcs_and_max_subnet.py  4432dc981511_add_max_backups_and_max_backup_size_gb_.py  64eabb3d4910_add_tags_to_resources.py  91ce5cd0520e_add_template_catalog_quota_requests_.py  a1b2c3d4e5f6_add_resource_notes_and_doc_pages.py  (+16 more)
backend/app/: main.py  worker.py
backend/seeds/: instance_types.yml
backend/tests/: conftest.py  test_admin.py  test_advanced_apis.py  test_api_standards.py  test_auth.py  test_backup_plans.py  test_backups.py  test_billing_health_storage.py  test_compute.py  test_compute_models.py  test_console_migration.py  test_dashboard.py  test_endpoints_dns.py  test_extended_apis.py  test_health.py  test_infra_apis.py  test_instance_types.py  test_ipam.py  test_lifecycle.py  test_lifecycle_events.py  test_mfa.py  test_monitoring.py  test_networking.py  test_phase9_apis.py  test_phase9_models.py  test_projects.py  test_sdn.py  test_security_infra.py  test_sg_storage_ops.py  test_storage.py  test_tags_restore.py  test_vpcs.py
(+186 files in other folders)
