[project]
name = "paws-backend"
version = "0.1.0"
description = "Proxmox Automated Web Services - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "httpx>=0.27.0",
    "proxmoxer>=2.0.0",
    "requests>=2.31.0",
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "aioboto3>=13.0.0",
    "aiosmtplib>=3.0.0",
    "bcrypt>=4.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["I001", "UP035", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
